Bug 31933: fix 1.18 regression in Monobook sidebar: huge spacing between portlets on IE 7 and IE 8/9 in compatibility view.
Followup r74966: drop some lines ported from MonoBook's old rtl.css. The floats don't seem to be needed and were breaking IE 7. Also contained some IE-Mac-related code that seems unnecessary since we no longer support that ancient browser. :)

Tested in:
* Firefox 7 LTR <- no regression
* Firefox 7 RTL <- no regression
* IE 6 LTR <- no regression
* IE 6 RTL <- no regression
* IE 7 LTR <- fixes regression
* IE 7 RTL <- no regression
* IE 8 regular LTR <- no regression
* IE 8 regular LTR <- no regression
* IE 8 regular RTL <- no regression
* IE 8 compatibility LTR <- fixes regression
* IE 8 compatibility RTL <- no regression
* IE 9 regular LTR <- no regression
* IE 9 regular RTL <- no regression
* IE 9 compatibility mode LTR <- fixes regression
* IE 9 compatibility mode RTL <- no regression

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -241,15 +241,6 @@ table.rimage {
 	width: 11.6em;
 	overflow: hidden;
 }
-html > body .portlet {
-	float: left;
-	clear: left;
-}
-/* recover IEMac (might be fine with the float, but usually it's close to IE */
-*>body .portlet {
-	float: none;
-	clear: none;
-}
 .portlet h4 {
 	font-size: 95%;
 	font-weight: normal;
